--- a/css/main.css
+++ b/css/main.css
@@ -13,21 +13,61 @@ h1 {
 	font-size: 2rem;
 }
 
-ul {
-	list-style-type: none;
-	display: inline-block;
- 	float:left;
- 	padding:  0;
+body {
+	margin: 0;
 }
 
-div {
+/**-----------------------------					
+ * ------ MAIN NAVIGATION ------ //
+ * -----------------------------					
+ */
+
+nav {
+	position: fixed;
+	width: 100%;
+	backdrop-filter: blur(6px);
+}
+
+.nav_burger {
+	display: block;
+	height: 6rem;
+	border-bottom: 1px solid #505050;
+	background-color: rgba(21,21,36,0.85);
+}
+
+.nav_item {
+	text-align: center;
+	text-decoration: none;
+	display: block;
+	background-color: rgba(21,21,36,0.85);
+	color: #D3D3D3;
+	padding: 0;
+	line-height: 3rem;
+	border-bottom: 1px solid #505050;
 	width: 100%;
 }
 
-ul li {
-	height: 5rem;
-	width: 100%
+#navBurgerSVG {
+	position: fixed;
+	height: 2rem;
+	padding: 0.5rem;
+	filter: invert(80%);
 }
+
+/* hover animations */
+
+#navBurgerSVG:hover {
+	filter: invert(100%);
+}
+
+.nav_item:hover {
+	filter: invert(100%);
+}
+
+/**--------------------					
+ * ------ SKILLS ------ //
+ * --------------------					
+ */
 
 #introSection {
 	padding-top: 10rem;
